Removed System.exec call in lieu of ProcessBuilder.start